# kafka-test

cpp/: CMakeLists.txt  config_producers.json  main-consumer.cpp  main-producer.cpp
cpp/producer/: ProducerRegistry.cpp  ProducerRegistry.hpp  ProducerWorker.cpp  ProducerWorker.hpp  ThreadPool.cpp  ThreadPool.hpp  producer.hpp
cpp/registry/: Registry.cpp  Registry.hpp
cpp/threadpool/: ThreadPool.cpp  ThreadPool.hpp
cpp/workers/consumer/: ConsumerWorker.cpp  ConsumerWorker.hpp
cpp/workers/interface/: IWorker.hpp
cpp/workers/producer/: ProducerWorker.cpp  ProducerWorker.hpp  producer.cpp
python/: Kafka.md  prepare_kafka.py  reinit_kubeadm.py
